[gd_scene load_steps=11 format=3 uid="uid://t1hi81lqi50s"]

[ext_resource type="PackedScene" uid="uid://lcb1uuqo0eie" path="res://Prefabs/ModuleButton.tscn" id="1_q51iy"]
[ext_resource type="Script" uid="uid://dyheltefooeoi" path="res://Scripts/TopicSelection.gd" id="1_tte2o"]
[ext_resource type="Script" uid="uid://yymeixsfhxxs" path="res://Scripts/OptionsButton.gd" id="3_3mbvn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bmxlf"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tte2o"]
bg_color = Color(0, 0.684312, 0.702722, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3mbvn"]
bg_color = Color(0, 0.684312, 0.702722, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dtjsi"]
bg_color = Color(0, 0.684312, 0.702722, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y0ekh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3v3jo"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3q1bb"]

[node name="Selection" type="Panel"]
custom_minimum_size = Vector2(1920, 1080)
offset_right = 40.0
offset_bottom = 40.0
theme_override_styles/panel = SubResource("StyleBoxFlat_bmxlf")
script = ExtResource("1_tte2o")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(1900, 1070)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -950.0
offset_top = -535.0
offset_right = 950.0
offset_bottom = 535.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Choose Categories"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AvailableModules" type="GridContainer" parent="."]
layout_mode = 2
offset_left = 10.0
offset_top = 188.0
offset_right = 1026.0
offset_bottom = 600.0
columns = 5

[node name="Button" parent="AvailableModules" instance=ExtResource("1_q51iy")]
layout_mode = 2

[node name="Button2" parent="AvailableModules" instance=ExtResource("1_q51iy")]
layout_mode = 2

[node name="Button3" parent="AvailableModules" instance=ExtResource("1_q51iy")]
layout_mode = 2

[node name="Button4" parent="AvailableModules" instance=ExtResource("1_q51iy")]
layout_mode = 2

[node name="Button5" parent="AvailableModules" instance=ExtResource("1_q51iy")]
layout_mode = 2

[node name="Button6" parent="AvailableModules" instance=ExtResource("1_q51iy")]
layout_mode = 2

[node name="Button7" parent="AvailableModules" instance=ExtResource("1_q51iy")]
layout_mode = 2

[node name="Button8" parent="AvailableModules" instance=ExtResource("1_q51iy")]
layout_mode = 2

[node name="Button9" parent="AvailableModules" instance=ExtResource("1_q51iy")]
layout_mode = 2

[node name="Button10" parent="AvailableModules" instance=ExtResource("1_q51iy")]
layout_mode = 2

[node name="Button11" parent="AvailableModules" instance=ExtResource("1_q51iy")]
layout_mode = 2

[node name="Button12" parent="AvailableModules" instance=ExtResource("1_q51iy")]
layout_mode = 2

[node name="Button13" parent="AvailableModules" instance=ExtResource("1_q51iy")]
layout_mode = 2

[node name="Button14" parent="AvailableModules" instance=ExtResource("1_q51iy")]
layout_mode = 2

[node name="Button15" parent="AvailableModules" instance=ExtResource("1_q51iy")]
layout_mode = 2

[node name="Button16" parent="AvailableModules" instance=ExtResource("1_q51iy")]
layout_mode = 2

[node name="StartButton" type="Button" parent="."]
custom_minimum_size = Vector2(200, 100)
layout_mode = 0
offset_left = 1692.0
offset_top = 813.0
offset_right = 1892.0
offset_bottom = 913.0
theme_override_font_sizes/font_size = 50
theme_override_styles/hover = SubResource("StyleBoxFlat_tte2o")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3mbvn")
theme_override_styles/normal = SubResource("StyleBoxFlat_dtjsi")
text = "START"

[node name="OptionsButton" type="Button" parent="."]
custom_minimum_size = Vector2(200, 100)
layout_mode = 0
offset_left = 1667.0
offset_top = 25.0
offset_right = 1887.0
offset_bottom = 125.0
theme_override_font_sizes/font_size = 30
theme_override_styles/hover = SubResource("StyleBoxFlat_tte2o")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3mbvn")
theme_override_styles/normal = SubResource("StyleBoxFlat_dtjsi")
text = "OPTIONS"
script = ExtResource("3_3mbvn")

[node name="RandomFilter" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 28.0
offset_top = 93.0
offset_right = 636.0
offset_bottom = 143.0
theme_override_constants/separation = 20

[node name="SelectAllButton" type="Button" parent="RandomFilter"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_styles/hover = SubResource("StyleBoxFlat_y0ekh")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3v3jo")
theme_override_styles/normal = SubResource("StyleBoxFlat_3q1bb")

[node name="Label" type="Label" parent="RandomFilter/SelectAllButton"]
layout_mode = 2
offset_left = 1.0
offset_right = 199.0
offset_bottom = 50.0
theme_override_font_sizes/font_size = 27
text = "SELECT ALL"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="DeselectAllButton" type="Button" parent="RandomFilter"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_styles/hover = SubResource("StyleBoxFlat_y0ekh")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3v3jo")
theme_override_styles/normal = SubResource("StyleBoxFlat_3q1bb")

[node name="Label" type="Label" parent="RandomFilter/DeselectAllButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 27
text = "DESELECT ALL"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="RandomSelectButton" type="Button" parent="RandomFilter"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_styles/hover = SubResource("StyleBoxFlat_y0ekh")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3v3jo")
theme_override_styles/normal = SubResource("StyleBoxFlat_3q1bb")

[node name="Label" type="Label" parent="RandomFilter/RandomSelectButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 27
text = "RANDOM"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[connection signal="button_up" from="StartButton" to="." method="_on_start_button_button_up"]
[connection signal="button_up" from="OptionsButton" to="OptionsButton" method="_on_button_up"]
[connection signal="button_up" from="RandomFilter/SelectAllButton" to="." method="_on_select_all_button_button_up"]
[connection signal="button_up" from="RandomFilter/DeselectAllButton" to="." method="_on_deselect_all_button_button_up"]
[connection signal="button_up" from="RandomFilter/RandomSelectButton" to="." method="_on_random_select_button_button_up"]
